--- a/app/src/main/res/layout/activity_show_db.xml
+++ b/app/src/main/res/layout/activity_show_db.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,13 +7,20 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:elevation="8dp"
-    app:cardCornerRadius="4dp">
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="4dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ShowDB"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true"
+        >
 
         <!--text view for our course name-->
         <TextView
@@ -21,7 +29,8 @@
             android:layout_height="wrap_content"
             android:padding="3dp"
             android:text="Item Name"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
