--- a/app/src/main/res/layout/dbactivity.xml
+++ b/app/src/main/res/layout/dbactivity.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".DBActivity">
+    tools:context=".DBActivity"
+    android:background="@drawable/bg_app">
 
 
     <TextView
