--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/bg_app">
+    android:background="@drawable/bg_app"
+    tools:context=".MainActivity">
+
     <Button
+        android:id="@+id/btnScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnScan"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="Scan"
-        android:layout_centerInParent="true">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </Button>
 
@@ -21,33 +27,41 @@
         android:id="@+id/tvScanContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Scan Content"
         android:layout_marginTop="28dp"
+        android:text="Scan Content"
 
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvScanFormat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Scan Format"
+        android:layout_width="183dp"
+        android:layout_height="198dp"
+        android:layout_marginStart="112dp"
 
-        />
+        android:layout_marginTop="80dp"
+        android:text="Scan Format"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnDb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        android:layout_below="@id/btnScan"
-        android:layout_centerHorizontal="true"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnScan" />
+
     <Button
+        android:id="@+id/btnView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnDb"
-        android:layout_centerHorizontal="true"
         android:text="View"
-        android:id="@+id/btnView">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnDb">
 
     </Button>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
