--- a/app/src/main/res/layout/activity_show_db.xml
+++ b/app/src/main/res/layout/activity_show_db.xml
@@ -29,7 +29,7 @@
         <!--text view for our course name-->
         <TextView
             android:id="@+id/idTVItemName"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:padding="3dp"
             android:text="Item Name"
@@ -40,9 +40,9 @@
             android:id="@+id/btnMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:backgroundTint="@color/white"
             android:background="@color/black"
+            android:backgroundTint="@color/white"
+            android:onClick="onClick"
             android:src="@drawable/ic_more">
 
         </ImageButton>
